--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 COMPOSE_PROJECT_NAME=ezpq
 
 ### GLOBAL VARIABLES
-DOMAIN=
-PUBLIC_NETWORK=
-NFS_OPTS=
-IMAGE_REGISTRY=
+HB_DOMAIN=
+HB_PROXY_NETWORK=
+HB_NFS_OPTS=
+HB_IMAGE_REGISTRY=
 
 ### PROJECT VARIABLES
 
@@ -13,6 +13,8 @@ IMAGE_REGISTRY=
 APP_SVC_ID=app
 APP_SUBDOMAIN=ezpq.
 APP_ROUTE_PREFIX=
-APP_STRIP_PREFIX=
+# APP_STRIP_PREFIX=
 APP_HTTP_PORT=80
-APP_PLACEMENT_LABEL=app-server
+APP_PLACEMENT_LABEL=frontend
+
+PYTHONPATH=src
