--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ### STACK NAME
-COMPOSE_PROJECT_NAME=ezpq
+COMPOSE_PROJECT_NAME=ppqueue
 
 ### GLOBAL VARIABLES
 HB_DOMAIN=
@@ -11,7 +11,7 @@ HB_IMAGE_REGISTRY=
 
 ## APP
 APP_SVC_ID=app
-APP_SUBDOMAIN=ezpq.
+APP_SUBDOMAIN=ppqueue.
 APP_ROUTE_PREFIX=
 # APP_STRIP_PREFIX=
 APP_HTTP_PORT=80
