--- a/Dockerfile-docs
+++ b/Dockerfile-docs
@@ -1,7 +1,7 @@
 ARG HB_IMAGE_REGISTRY=docker.io
 FROM ${HB_IMAGE_REGISTRY}/nginx:1
-LABEL org.opencontainers.image.source=https://www.github.com/fresh2dev/ezpq
-LABEL org.opencontainers.image.description="None"
-LABEL org.opencontainers.image.licenses=GPLv3
+LABEL org.opencontainers.image.source=https://www.github.com/fresh2dev/ppqueue
+LABEL org.opencontainers.image.description="Parallel Process Queue (ppqueue) for Python"
+LABEL org.opencontainers.image.licenses=MIT
 ARG CONTENT_PATH=public
 COPY $CONTENT_PATH /usr/share/nginx/html
