--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,20 +1,21 @@
 # Changes here will be overwritten by Copier
-_commit: 8d1a17d
+_commit: a01a11e
 _src_path: https://codeberg.org/Fresh2dev/copier-f2dv-project.git
-author_email: hello@Fresh2.dev
+author_email: hello@f2dv.com
 author_name: Donald Mellenbruch
 ci_domain_name: lokalhost.net
-docs_url: https://www.Fresh2.dev/code/r/ppqueue/i
-funding_url: https://www.Fresh2.dev/funding
-home_page: https://www.Fresh2.dev
+docs_url: https://www.f2dv.com/r/ppqueue
+funding_url: https://www.f2dv.com/fund
+home_domain: f2dv.com
+home_page: https://www.f2dv.com
 is_minimal: false
 is_python: true
 license_type: MIT
 package_name: ppqueue
-project_description: Parallel Process Queue (ppqueue) for Python
+project_description: A Parallel Process Queue for Python.
 project_name: ppqueue
 python_version: '3.8'
-repo_mirror: https://www.Fresh2.dev/code/r/ppqueue
+repo_mirror: https://www.f2dv.com/r/ppqueue
 repo_name: fresh2dev/ppqueue
 repo_owner: fresh2dev
 repo_url: https://www.github.com/fresh2dev/ppqueue
