--- a/.dockerignore
+++ b/.dockerignore
@@ -2,12 +2,15 @@
 
 **/secrets
 !**/*.keep
-**/*.tmp/build
+**/*.tmp
+**/.vscode
+**/.DS_store
+/build
+**/.ipynb_checkpoints
 **/.coverage
 **/.hypothesis
 **/.tox
 **/.idea
-**/.vscode
 **/*.egg-info
 **/.mypy_cache
 **/__pycache__
